# FaceGate

./: .gitignore  README.md  WINDOWS_BUILD.md  cli.py  config.json  config.yaml  gym_vision.spec  main.py  pyproject.toml  test_ws_server_gui.spec
.github/workflows/: build-linux.yml  build-windows.yml
scripts/: build_windows.ps1  test_ws_server.py  test_ws_server_gui.py
src/: Logging.py  config.py  errors.py
src/repository/database/: controller.py
src/repository/detection/: _detection_base.py  yunet.py
src/repository/recognition/: _recognition_base.py  sface.py
src/tasks/: queue.py  recognizer.py  websockets.py
src/utils/: utils.py
